mirroring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mirroring-demo
  labels:
    istio-injection: enabled
