mirroring/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
  - "mirroring-demo.kcd.local"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-service-v1
      weight: 100
    - destination:
        host: nginx-service-v2
      weight: 0
    mirror:
      host: nginx-service-v2
    mirrorPercentage: 
      value: 100.0
